<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Header -->
    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_title"
        android:textSize="24sp"
        android:textColor="@color/primaryColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Description -->
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toBottomOf="@id/headerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- ImageView for the song -->
    <ImageView
        android:id="@+id/audioImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/music_icon"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Song Title -->
    <TextView
        android:id="@+id/audioNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@id/audioImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Buttons in horizontal layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/audioNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <!-- Play Button -->
        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@null"
            android:contentDescription="@string/play_description"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_play" />

        <!-- Pause Button -->
        <ImageButton
            android:id="@+id/pauseButton"
            android:visibility="gone"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/icon_pause"
            android:background="@null"
            android:contentDescription="@string/pause_description"
            android:scaleType="fitCenter"/>

        <!-- Stop Button -->
        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="40dp"
            android:background="@null"
            android:contentDescription="@string/stop_description"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_fin" />

    </LinearLayout>

    <!-- Back Button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/ButtonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audioNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
